add mvc structure

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
 
 
-    <script type="text/javascript" src='./index.js'></script>
+    <script type="text/javascript" src='./src/requests/index.js'></script>
+    <script type="text/javascript" src='./src/models/animal.js'></script>
+    <script type="text/javascript" src='./src/controllers/animalController.js'></script>
+    <script type="text/javascript" src='./src/views/animalList.js'></script>
+    <script type="text/javascript" src='./src/index.js'></script>
   </body>
 </html>
